End of Lecture 24

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ActionRoguelike/Maps/TestLevel.TestLevel
-EditorStartupMap=/Game/ActionRoguelike/Maps/TestLevel.TestLevel
+GameDefaultMap=/Game/ActionRoguelike/Maps/MainMenu_Entry.MainMenu_Entry
+EditorStartupMap=/Game/ActionRoguelike/Maps/MainMenu_Entry.MainMenu_Entry
+GlobalDefaultGameMode=/Game/ActionRoguelike/BP_GameModeBase.BP_GameModeBase_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
